--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -32,3 +32,9 @@
 
 @import 'common/vue-transitions';
 @import 'common/promotions';
+@import 'common/mobile-header';
+@import 'common/mobile-footer';
+@import 'common/mobile-login';
+@import 'common/mobile-menu';
+
+
