--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -1,27 +1,21 @@
 @import "./variables";
 
 body {
-  background-color: #1e293e;
+  background-color: #101928;
 }
+
 body .main-contend {
   background-color: #101928;
   width: 100%;
-  min-width: 1200px;
 
   > div {
-    width: 1200px;
     margin: 0 auto;
   }
 }
+
 body.iframe {
   background-color: #101928;
   width: 100%;
-}
-
-.body-mobile-hidden > * {
-    @media (max-width: 768px) {
-        display: none;
-    }
 }
 
 .bet a:focus,
@@ -37,6 +31,7 @@ button:focus {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none;   /* Chrome/Safari/Opera */
     -khtml-user-select: none;    /* Konqueror */
+    -o-user-select: none;    /* Konqueror */
     -moz-user-select: none;      /* Firefox */
     -ms-user-select: none;       /* Internet Explorer/Edge */
     user-select: none;
@@ -49,6 +44,36 @@ button:focus {
 .font-text {
     font-family: $font-sans;
 }
+
+@media (max-width: $mobile-screen-width) {
+  .navbar.navbar-default.navbar-static-top {
+    display: none;
+  }
+
+  body .main-contend {
+    min-width: unset !important;
+  }
+
+  .bet .main-contend {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  #chat {
+    display: none;
+  }
+}
+
+@media (min-width: $mobile-screen-width) {
+  body .main-contend {
+    min-width: 1200px;
+
+    > div {
+      width: 1200px;
+    }
+  }
+}
+
 
 @import "./input";
 @import "./file.dragndrop";
