--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -52,7 +52,7 @@
             font-size: 12px;
             color: #99ccff;
             outline: none;
-            line-height: 26px;
+            margin-bottom: 12px;
 
             &:focus,
             &:hover {
@@ -101,6 +101,71 @@
       float: right;
       text-align: right;
       margin-right: 15px;
+    }
+  }
+}
+
+@media (max-width: $mobile-screen-width) {
+  .page-footer {
+    .content {
+      width: 100%;
+      height: auto;
+
+      .row {
+        .menu {
+          height: auto;
+          display: block;
+
+          .social {
+            display: none;
+          }
+
+          .links {
+            float: none;
+            display: none;
+            overflow: hidden;
+            width: 100%;
+            padding-left: 0;
+
+            .col {
+              float: left;
+              overflow: hidden;
+              width: 33%;
+            }
+          }
+
+          .icons {
+            padding-top: 20px;
+            display: block;
+            margin: 0 auto;
+            width: 250px;
+
+            a {
+              margin: 5px;
+            }
+          }
+        }
+
+        .copyright {
+          display: block;
+          float: none;
+          margin: 0 auto;
+        }
+
+        .payments {
+          float: none;
+          margin: 0 auto;
+        }
+
+        > .col-xs-4 {
+          float: none;
+          margin: 0 auto;
+          width: 100%;
+          padding: 0;
+          min-height: unset;
+
+        }
+      }
     }
   }
 }
