--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -28,22 +28,38 @@
 }
 
 .markets {
-    .header {
+    table {
+        td, th {
+            height: 42px;
+        }
+    }
+
+    > .header {
         font-family: $font-exo;
         background-color: #1e293e;
-        line-height: 42px;
         border-radius: 5px 5px 0 0;
         font-size: 18px;
-        padding-left: 20px;
+        padding: 10px 0 0 20px;
+        min-height: 42px;
+        overflow: auto;
 
         >i {
             float: right;
-            margin: 0 20px 0 0;
-            line-height: 42px;
             cursor: pointer;
 
             &.cp-stats-dots {
+                margin-top: 6px;
                 font-size: 14px;
+            }
+
+            &.cp-cross {
+                font-size: 12px;
+                height: 30px;
+                width: 56px;
+                text-align: center;
+                vertical-align: bottom;
+                padding: 8px 10px 8px 10px;
+                z-index: 50;
             }
         }
     }
@@ -51,12 +67,12 @@
     .title {
         font-family: $font-exo;
         font-size: 16px;
-        line-height: 42px;
         margin-top: 5px;
-        height: 42px;
+        min-height: 42px;
         color: #FFF;
         background-color: #4a7fb3;
-        padding: 0 20px;
+        padding: 10px 20px;
+        overflow: auto;
 
         span {
             cursor: pointer;
@@ -64,7 +80,6 @@
 
         i {
             float: right;
-            line-height: 42px;
             width: 15px;
             text-align: center;
             cursor: pointer;
@@ -90,7 +105,7 @@
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 318px;
+                width: 50%;
                 cursor: default;
             }
 
@@ -108,6 +123,7 @@
 
             .selection {
                 background-color: #536883;
+                min-height: 42px;
 
                 &.odd {
                     background-color: #607d8b;
@@ -141,7 +157,7 @@
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 212px;
+                width: 33%;
                 cursor: default;
             }
 
@@ -159,6 +175,7 @@
 
             .selection {
                 background-color: #536883;
+                min-height: 42px;
 
                 &.odd {
                     background-color: #607d8b;
@@ -192,7 +209,7 @@
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 212px;
+                width: 33%;
                 cursor: default;
             }
 
@@ -210,6 +227,7 @@
 
             .selection {
                 background-color: #536883;
+                min-height: 42px;
 
                 &.odd {
                     background-color: darken(#536883, 5%);
@@ -243,18 +261,16 @@
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 212px;
+                width: 33%;
             }
 
             .selection {
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 141px;
+                width: 22%;
                 max-width: 141px;
                 overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
                 cursor: default;
             }
 
@@ -272,6 +288,7 @@
 
             .selection {
                 background-color: #536883;
+                min-height: 42px;
 
                 &.odd {
                     background-color: darken(#536883, 5%);
@@ -298,7 +315,11 @@
         font-size: 14px;
 
         .selection {
-            width: 212px;
+            width: 33%;
+
+            table {
+                width: 100%;
+            }
         }
 
         .separator {
@@ -314,11 +335,8 @@
                 color: #99ccff;
                 font-weight: normal;
                 font-size: 14px;
-                width: 212px;
+                width: 33%;
                 max-width: 212px;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
                 cursor: default;
             }
         }
@@ -382,7 +400,7 @@
 }
 
 .market-unavailable {
-    border-radius: 0px;
+    border-radius: 0;
     padding: 1px;
     background: #1e293e;
 
@@ -391,5 +409,26 @@
         font-size: 14px;
         color: #99ccff;
         text-align: center;
+    }
+}
+
+@media (max-width: $mobile-screen-width) {
+    #banners-container {
+        display: none;
+    }
+
+    .markets-container {
+        overflow: hidden;
+        float: none;
+        min-height: unset;
+        width: 100%;
+
+        margin: 0 0 50px;
+    }
+}
+
+@media (min-width: $mobile-screen-width) {
+    .markets-container {
+        display: block !important;
     }
 }
