--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -165,6 +165,13 @@
           min-height: unset;
 
         }
+
+        .col-xs-12 {
+          p:nth-child(2) {
+            display: none;
+          }
+        }
+
       }
     }
   }
