--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -387,6 +387,10 @@
         &.float {
             position: static;
         }
+
+        .suggested-bets {
+            display: none;
+        }
     }
 }
 
