--- a/resources/assets/sass/common/mobile-footer.scss
+++ b/resources/assets/sass/common/mobile-footer.scss
@@ -9,8 +9,9 @@
   border-radius: 50%;
   padding: 10px 2px 0 0;
   cursor: pointer;
+  z-index: 999;
 
-    .tab {
+  .tab {
       box-sizing: border-box;
       text-align: center;
       overflow: visible;
