--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -34,6 +34,9 @@
 @import 'common/promotions';
 @import 'common/mobile-header';
 @import 'common/mobile-footer';
+@import 'common/mobile-up-button';
+@import 'common/mobile-bet-alert';
+@import 'common/mobile-search-bar';
 @import 'common/mobile-login';
 @import 'common/mobile-menu';
 
