--- a/resources/assets/sass/sports/sportsMenu.scss
+++ b/resources/assets/sass/sports/sportsMenu.scss
@@ -259,8 +259,8 @@
     .sportsMenu-container {
         float: none;
         display: none;
-        margin-bottom: 50px;
         width: 100%;
+        min-height: unset;
     }
 }
 
