--- a/resources/assets/sass/common/mobile-bet-alert.scss
+++ b/resources/assets/sass/common/mobile-bet-alert.scss
@@ -10,6 +10,7 @@
   font-size: 14px;
   opacity: .9;
   height: 42px;
+  text-align: center;
 
   &.add {
     background: #71aa30;
@@ -17,10 +18,5 @@
 
   &.remove {
     background: #ff3300;
-  }
-
-  i {
-    float: right;
-    cursor: pointer;
   }
 }
