--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -422,8 +422,7 @@
         float: none;
         min-height: unset;
         width: 100%;
-
-        margin: 0 0 50px;
+        margin: 0;
     }
 }
 
