ref 225: fix betslip login

--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -3,6 +3,7 @@
 .page-footer {
   background-color: #1e293e;
   padding: 30px 0;
+  min-width: 1200px;
 
   a {
     cursor: pointer;
@@ -108,6 +109,7 @@
 @media (max-width: $mobile-screen-width) {
   .page-footer {
     padding: 0;
+    min-width: unset;
 
     .content {
       width: 100%;
