--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -33,7 +33,7 @@
 @import 'common/vue-transitions';
 @import 'common/promotions';
 @import 'common/mobile-header';
-@import 'common/mobile-footer';
+@import 'common/mobile-betslip-button';
 @import 'common/mobile-up-button';
 @import 'common/mobile-bet-alert';
 @import 'common/mobile-search-bar';
