--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -273,6 +273,10 @@
         width: 41.66666667%;
       }
 
+      .col-sm-6 {
+        width: 50%;
+      }
+
       .col-sm-7 {
         width: 58.33333333%;
       }
@@ -369,6 +373,12 @@
 
     .profile-footer {
         display: none;
+    }
+
+    .limites {
+      input[type="submit"] {
+        margin-top: 15px;
+      }
     }
   }
 }
