--- a/resources/assets/sass/common/mobile-betslip-button.scss
+++ b/resources/assets/sass/common/mobile-betslip-button.scss
@@ -5,11 +5,13 @@
   height: 42px;
   width: 42px;
   bottom: 20px;
-  background: #ff9900;
+  background: #ff3300;
   border-radius: 50%;
   padding: 10px 2px 0 0;
   cursor: pointer;
   z-index: 999;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.12), 0 10px 20px rgba(0,0,0,0.24);
+
 
   .tab {
       box-sizing: border-box;
@@ -19,6 +21,7 @@
       color: white;
       font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-size: 16px;
+      font-weight: bold;
 
       &.selected {
         background: #99ccff;
