ref #225: fix iphone5s

--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -3,7 +3,6 @@
 .page-footer {
   background-color: #1e293e;
   padding: 30px 0;
-  min-width: 1200px;
 
   a {
     cursor: pointer;
@@ -179,5 +178,11 @@
 
       }
     }
+  }
+}
+
+@media (min-width: $mobile-screen-width) {
+  .page-footer {
+    min-width: 1200px;
   }
 }
