--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -143,7 +143,6 @@
             .links-content {
                 .link {
                     width: 33%;
-                    min-width: 150px;
 
                     &.last {
                         width: 33%;
@@ -154,10 +153,11 @@
 
         .content {
             width: 100%;
+            max-width: 767px;
 
             .scrollable-content {
-                width: 100vw;
-                overflow-x: auto;
+                width: calc(100vw - 50px);
+                overflow-x: scroll;
             }
         }
     }
