--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -439,11 +439,6 @@
   border: 2px solid #ff9900;
   border-radius: $border-radius;
 
-  i {
-    opacity: 0.2 !important;
-    filter: alpha(opacity=50) !important; /* For IE8 and earlier */
-  }
-
   > .header {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     line-height: 40px;
@@ -456,6 +451,7 @@
     padding: 0 20px;
 
     i {
+      display: none;
       float: right;
       line-height: 44px;
       margin-left: 15px;
@@ -538,6 +534,7 @@
   > .footer {
     background-color: white;
     padding: 15px;
+    overflow: auto;
 
     .actions {
       padding-top: 15px;
@@ -701,6 +698,7 @@
         border: none;
         outline: none;
         box-shadow: none;
+        opacity: 1;
       }
     }
     #deposit_tb {
@@ -840,6 +838,10 @@
           display: none;
         }
       }
+
+      .footer {
+        overflow: auto;
+      }
     }
 
     .register_step3 {
@@ -859,8 +861,20 @@
         }
       }
 
-      .content .icons .col-xs-4 {
-        width: 185px;
+      .content {
+        .icons > .col-xs-4 {
+          width: 185px;
+        }
+
+        .deposit-field .warning-color {
+          line-height: normal;
+        }
+
+        .tax, .total  {
+          .text-right {
+            text-align: inherit;
+          }
+        }
       }
     }
 
