--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -79,6 +79,7 @@
             width: 15px;
             text-align: center;
             cursor: pointer;
+            margin-top: 5px;
         }
     }
 
