--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -347,7 +347,8 @@
   }
   .grupo {
     position: relative;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
+    margin: 0;
     .grupo-title {
       line-height: $line-height;
     }
@@ -374,7 +375,9 @@
   }
   .warning-msg {
     color: #ff9900;
-    margin-bottom: 5px;
+    line-height: 25px;
+    height: 25px;
+    margin: 0;
   }
 }
 .wrap-table {
