#237: Novo layout de limites

--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -351,6 +351,7 @@
     margin: 0;
     .grupo-title {
       line-height: $line-height;
+      cursor: pointer;
     }
     input[type=text] {
       color: $color-text-box;
