ref #239: Actualizar Bet do dia

--- a/resources/assets/sass/common/cpIcons.scss
+++ b/resources/assets/sass/common/cpIcons.scss
@@ -24,6 +24,60 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cp-Ativo-2:before {
+  content: "\e94b";
+}
+.cp-verified_user:before {
+  content: "\e945";
+}
+.cp-megaphone:before {
+  content: "\e946";
+}
+.cp-history:before {
+  content: "\e947";
+}
+.cp-award:before {
+  content: "\e948";
+}
+.cp-pig-coin:before {
+  content: "\e949";
+}
+.cp-pig:before {
+  content: "\e94a";
+}
+.cp-cloud-download:before {
+  content: "\e9c2";
+}
+.cp-sign-out:before {
+  content: "\e93e";
+}
+.cp-lifebuoy:before {
+  content: "\e941";
+}
+.cp-share2:before {
+  content: "\ea82";
+}
+.cp-arrow-up2:before {
+  content: "\ea3a";
+}
+.cp-arrow-right2:before {
+  content: "\ea3c";
+}
+.cp-arrow-down2:before {
+  content: "\ea3e";
+}
+.cp-arrow-left2:before {
+  content: "\ea40";
+}
+.cp-home:before {
+  content: "\e93f";
+}
+.cp-menu:before {
+  content: "\e940";
+}
+.cp-dots-three-vertical:before {
+  content: "\e942";
+}
 .cp-banca-francesa:before {
   content: "\e91a";
 }
