--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -27,6 +27,7 @@
 @import 'sports/liveMenu';
 @import 'sports/sportsMenu';
 
+@import 'sports/suggestedBets';
 
 @import 'middleAlert/middleAlert';
 
