--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -33,4 +33,16 @@
         background-color: #4a7fb3;
         color:  #fff;
     }
+
+    .markets-unavailable {
+        display: none;
+    }
+}
+
+@media (max-width: $mobile-screen-width) {
+    .sportsMenu {
+        .markets-unavailable {
+            display: block;
+        }
+    }
 }
