--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -78,7 +78,7 @@
     p {
       font-family: $font-sans;
       font-size: 11px;
-      color: #fff;
+      color: #536883;
       padding: 0;
       text-align: justify;
     }
