--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -5,7 +5,7 @@
   background: none;
   color: @btn-brand-color;
   border: 1px solid @btn-brand-border-color;
-  border-radius: @border-radius;
+  border-radius: 0;
   &:hover {
     color: @btn-brand-color-hover;
     border-color: #adadad;
@@ -57,7 +57,6 @@
 
 .botao-registar {
   border: 1px solid #fff;
-  border-radius: @border-radius;
   line-height: 30px;
   height: 30px;
   text-align: center;
@@ -69,6 +68,7 @@
   font-size: 80%;
 }
 input.botao-registar {
+  border-radius: 0 !important;
   color: #333;
   &:hover {
     color: #111;
