--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -239,6 +239,7 @@ nav {
     line-height: 18px;
     height: 30px;
     font-weight: bold;
+    border-radius: 0 !important;
     &:hover {
       background-color: @color-orange-hover;
     }
@@ -291,7 +292,7 @@ nav {
     background: #ffffff;
     border: 1px solid #ddd;
     border-bottom: 2px solid #ddd;
-    border-radius: 10px; /* 4px */
+    border-radius: 0;
     padding: 15px 15px 5px 15px;
     font-size: 85%;
     li {
@@ -314,7 +315,7 @@ nav {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 0px 0px 10px 10px;
+    border-width: 0px 10px 10px 10px;
     border-color: transparent transparent #fafafa transparent;
     margin-top: 5px;
   }
@@ -361,7 +362,7 @@ nav {
     }
     .available {
       font-weight: bold;
-      color: #00AA00;
+      color: #679a01;
     }
     .total {
       font-weight: bold;
