ref #249: small design fixes

--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -283,7 +283,7 @@ nav {
 
 @menu-header-width: 140px;
 .menu_header {
-  width: @menu-header-width;
+  width: 240px;
   position: absolute;
   display: none;
   z-index: 50;
@@ -348,7 +348,7 @@ nav {
       padding: 0 0 4px;
     }
     .menu_triangle {
-      margin-left: @menu-header-width / 3 - 5px;
+      margin-left: 45px;
     }
     .menu_triangle_contend {
       padding: 15px 10px 5px 10px;
@@ -372,10 +372,10 @@ nav {
   &.menu_user {
     right: 0;
     .menu_triangle_contend {
-      padding: 5px 15px 5px 15px;
+      padding: 5px 0 15px;
     }
     .menu_triangle {
-      margin-left: @menu-header-width / 2 - 5px;
+      margin-left: 175px;
     }
   }
   &.menu_lang {
