ref #245: rearranjo do header

--- a/resources/assets/less/old.header.less
+++ b/resources/assets/less/old.header.less
@@ -52,6 +52,13 @@
 }
 .options {
   position: relative;
+
+  .logout {
+    text-decoration: none;
+    &:hover {
+      color: #fff !important;
+    }
+  }
 }
 .option {
   font-size: 180%;
