--- a/resources/assets/less/buttons.less
+++ b/resources/assets/less/buttons.less
@@ -7,8 +7,8 @@
   border: 1px solid @btn-brand-border-color;
   border-radius: 0;
   &:hover {
-    color: @btn-brand-color-hover;
-    border-color: #adadad;
+    color: #fff;
+    //border-color: #adadad;
   }
   &,
   &:focus,
