ref #274: fix Basketball live Mobile

--- a/resources/assets/sass/sports/fixtures.scss
+++ b/resources/assets/sass/sports/fixtures.scss
@@ -247,6 +247,10 @@
                 span {
                     margin: 10px 0 0 0;
                     display: inline-block;
+                    width: calc(100% - 78px);
+                    text-overflow: clip;
+                    white-space: nowrap;
+                    overflow: hidden;
                 }
 
                 .gameLive {
