--- a/resources/assets/sass/carousel/carousel.scss
+++ b/resources/assets/sass/carousel/carousel.scss
@@ -14,9 +14,9 @@
         width:400%;
         height:100%;
         position:relative;
-        -webkit-animation:slide 30s infinite;
-        -moz-animation:slide 30s infinite;
-        animation:slide 30s infinite;
+        //-webkit-animation:slide 30s infinite;
+        //-moz-animation:slide 30s infinite;
+        //animation:slide 30s infinite;
     }
 
     .slider{
