--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,3 +1,8 @@
+@import (less) "vendor/normalize.less";
+@import (less) "vendor/animate.less";
+@import (less) "vendor/bootstrap.main.less";
+
+
 @import (less) "old.less";
 
 @import (less) "../../../public/assets/portal/css/jquery-ui.css";
